--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1161,7 +1161,8 @@ input, select, textarea {
 .container {
 	background-image: url("../../images/mackinac-bridge-dark.jpg");
 	background-repeat: no-repeat;
-  	background-size: 100% 100%;
+	background-size: 100% 100%;
+	background-attachment: fixed
 }
 
 /* Wrapper */
